# RGC-Chart

./: .gitignore  Cargo.toml  README.md  package.json  test-wasm.sh
scripts/: fix-pkg-names.js  fix-pkg.js
src/: errors.rs  helpers.rs  lib.rs  macros.rs
src/chart_convertion/: chart_classes.rs  mod.rs  rhythm.rs
src/chart_convertion/maps/: Beatmania.rs  Etterna.rs  Osu.rs  Other.rs  Quaver.rs  Stepmania.rs  mod.rs
src/models/: chart.rs  chartinfo.rs  common.rs  hitobjects.rs  metadata.rs  mod.rs  rhythm.rs  sound.rs  timeline.rs  timing_points.rs
src/parsers/: osu.rs  quaver.rs  stepmania.rs
src/utils/: math.rs  mod.rs  rhythm.rs  string.rs  time.rs
src/writers/: mod.rs  osu.rs  quaver.rs  stepmania.rs
tests/: to_osu.rs  to_qua.rs  to_sm.rs
tests/Maps/etterna/Kil_ChineseTea/: Variations2.dwi  ct.sm
tests/Maps/etterna/MouUtaShikaKikoenai/: touhouwhatever.dwi  touhouwhatever.sm
tests/Maps/etterna/MysticOrientalLoveConsultant/: asdf.dwi  asdf.sm
tests/Maps/etterna/UNOwenWasHer/: asdf.dwi
tests/Maps/osu/1062298_MarisaStole/: IOSYS - Marisa wa Taihen na Mono wo Nusunde Ikimashita (notapplicable) [SVanghai Doll].osu  IOSYS - Marisa wa Taihen na Mono wo Nusunde Ikimashita (notapplicable) [Shanghai Doll].osu
tests/Maps/osu/1888601_LunaticEyes/: COOL&CREATE - Lunatic Eyes ~ Invisible Full Moon (Cut Ver.) (TheFunk) [Blood Moon 1.35x (270bpm)].osu  COOL&CREATE - Lunatic Eyes ~ Invisible Full Moon (Cut Ver.) (TheFunk) [Blood Moon].osu
tests/Maps/quaver/2366_177_NewNonBiyori/: 19248.qua  20604.qua
tests/Maps/quaver/24312_870_AngyBirdPhonk/: 107915.qua  125133.qua  125134.qua  125200.qua
tests/Maps/quaver/34863_965_cradles/: 148156.qua
tests/Maps/quaver/4548_886_Ziqqurat/: 34785.qua
tests/test_stuff/: mod.rs  util.rs
tests/wasm/: index.html  styles.css  testing.js
tests/wasm/js/: to_osu.js  to_qua.js  to_sm.js
