[package]
name = "rgc-chart"
repository = "https://github.com/menvae/RGC-Chart"
authors = ["menvae"]
description = "A library for parsing and writing rhythm game charts."
license = "MIT"
version = "0.0.1"
edition = "2021"
exclude = [
    "tests/*",
    ".vscode/*",
    "test-wasm.sh",
]

[lib]
crate-type = ["cdylib", "rlib"]
doctest = false # TODO: re add doctest when we have better docs

[dev-dependencies]
wasm-bindgen-test = "0.3"

[dependencies]
# nanoserde = { version = "0.2.1", default-features = false, features = ["json", "binary"] }
wasm-bindgen = "0.2.100"
# web-sys = { version = "0.3", features = [
#  'console'
# ] }

[profile.release]
strip = false
debug = true
opt-level = 3
lto = true